W-15183893: Update dependency com.sun.mail:mailapi to v1.6.7 (#602)
Co-authored-by: renovate-07-kbuild[bot] <115596514+renovate-07-kbuild[bot]@users.noreply.github.com>